force-app/main/default/objects/SEG_ServiciosCSO__c/SEG_ServiciosCSO__c.object-meta.xml
<CustomObject>
    <label>Servicios CSO</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Servicio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios CSO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>