force-app/main/default/objects/SEG_ServiciosCSO__c/fields/SEG_Activo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>