force-app/main/default/objects/SEG_ServiciosCSO__c/fields/SEG_TMO__c.field-meta.xml
<CustomField>
    <fullName>SEG_TMO__c</fullName>
    <label>TMO</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>