force-app/main/default/objects/SEG_ServiciosCSO__c/recordTypes/Marca.recordType-meta.xml
<RecordType>
    <fullName>Marca</fullName>
    <active>true</active>
    <label>Marca</label>
</RecordType>