force-app/main/default/objects/SEG_ServiciosCSO__c/recordTypes/MCC.recordType-meta.xml
<RecordType>
    <fullName>MCC</fullName>
    <active>true</active>
    <label>MCC</label>
</RecordType>