force-app/main/default/objects/SEG_ServiciosCSO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SEG_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>