force-app/main/default/objects/SEG_ServiciosCSO__c/listViews/Marcas.listView-meta.xml
<ListView>
    <fullName>Marcas</fullName>
    <columns>NAME</columns>
    <columns>SEG_Activo__c</columns>
    <columns>SEG_TMO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SEG_ServiciosCSO__c.Marca</value>
    </filters>
    <label>Marcas</label>
</ListView>